--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 ---
 layout: default
 title: Security analysis
-page-title: your awesome page-title.
-home-title: your awesome home-title.
-description: description
+page-title: 安全技术研究.
+home-title: 技术复现以及检测.
+description: 某些攻击技术的复现过程以及过程中可能产生的检测特征
 ---
 
 {% include header.html %}
