--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Security analysis
 page-title: 安全技术研究.
 home-title: 技术复现以及检测.
-description: 某些攻击技术的复现过程以及过程中可能产生的检测特征
+description: 某些攻击技术的复现过程以及过程中可能产生的检测特征~
 ---
 
 {% include header.html %}
