--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Security analysis
 page-title: 安全技术研究.
 home-title: 技术复现以及检测.
-description: 123
+description: 攻击技术的复现过程以及可能出现的攻击日志留存特征~~~
 ---
 
 {% include header.html %}
